.provarCaches/00D410000011HE0EAM/objects/rstk__wopscrp__c.object
<CustomObject>
    <description>wopscrp__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__wopscrp_ordno__r.rstk__wocst_ordno__c &amp; &apos;_&apos; &amp;  TEXT(rstk__wopscrp_oper__r.rstk__woordop_oper__c) &amp; &apos;_&apos; &amp;  TEXT(rstk__wopscrp_seqno__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divwopscrps</relationshipLabel>
        <relationshipName>divwopscrps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_dmddolchgoutfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This  is the Demand amount, charged out for Freight</inlineHelpText>
        <label>wopscrp_dmddolchgoutfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_dmddolchgoutlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Labor Cost</inlineHelpText>
        <label>WO Op Scrap Dmd Deduction, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_dmddolchgoutmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Material Cost</inlineHelpText>
        <label>WO Op Scrap Dmd Deduction, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_dmddolchgoutohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Fringe Overhead</inlineHelpText>
        <label>WO Op Scrap Dmd Deduction, Fringe Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_dmddolchgoutohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Labor Overhead Cost</inlineHelpText>
        <label>WO Op Scrap Dmd Deduction, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_dmddolchgoutohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Machine Overhead Cost</inlineHelpText>
        <label>WO Op Scrap Dmd Deduction, Machine Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_dmddolchgoutohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Material Overhead Cost</inlineHelpText>
        <label>WO Op Scrap Dmd Deduction, Material Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_dmddolchgoutothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This  is the Supply amount, charged out for Other Indirect Charges</inlineHelpText>
        <label>wopscrp_dmddolchgoutothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_dmddolchgoutsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Subcontract Labor Cost</inlineHelpText>
        <label>WO Op Scrap Dmd Deduction, Subcon Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_dmddolchgoutsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Subcontract Material Cost</inlineHelpText>
        <label>WO Op Scrap Dmd Deduction, Subcon Mtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_oper__c</fullName>
        <inlineHelpText>Operation Number where Scrap occurred.</inlineHelpText>
        <label>Operation Number</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>WO Operation Scrap</relationshipLabel>
        <relationshipName>WO_Operation_Scrap</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_ordno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Work Order Number</inlineHelpText>
        <label>Order No</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>WO Operation Scrap</relationshipLabel>
        <relationshipName>WO_Operation_Scrap</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_qtyscrap__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity Scrapped</inlineHelpText>
        <label>Qty Scrapped</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_scrapreason__c</fullName>
        <inlineHelpText>Associated Reason Code</inlineHelpText>
        <label>Scrap Reason Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_seqno__c</fullName>
        <inlineHelpText>Sequence Number associated with this Operation</inlineHelpText>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>WO Operation Scrap</relationshipLabel>
        <relationshipName>wopscrps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_srlno__c</fullName>
        <inlineHelpText>Serial Number of scrapped unit</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_supdolchgoutfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This  is the Supply amount, charged out for Freight</inlineHelpText>
        <label>wopscrp_supdolchgoutfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_supdolchgoutlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Supply Labor Cost</inlineHelpText>
        <label>WO Op Scrap Supply Deductions, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_supdolchgoutmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not currently used</inlineHelpText>
        <label>SUPDOLCHGOUTMTL (Not used)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_supdolchgoutohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Fringe Overhead Cost</inlineHelpText>
        <label>WO Op Scrap Supply Deductions, Fringe Oh</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_supdolchgoutohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Supply Labor Overhead Cost</inlineHelpText>
        <label>WO Op Scrap Supply Deductions, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_supdolchgoutohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Supply Machine Overhead Cost</inlineHelpText>
        <label>WO Op Scrap Supply Deductions, Mach Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_supdolchgoutohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not currently used</inlineHelpText>
        <label>SUPDOLCHGOUTOHDMTL (Not used)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_supdolchgoutothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This  is the Supply amount, charged out for Other Indirect Charges</inlineHelpText>
        <label>wopscrp_supdolchgoutothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_supdolchgoutsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Supply Subcontract Labor Cost</inlineHelpText>
        <label>WO Op Scrap Supply Deductions, Sub Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wopscrp_supdolchgoutsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not currently used</inlineHelpText>
        <label>SUPDOLCHGOUTSUBMTL (Not used)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>WO Operation Scrap</label>
    <nameField>
        <label>WOPSCRP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WO Operation Scrap</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>